# MoodForMusic

./: 110-2_系統簡介.doc  111學年-二技第2組-專題刀鋒伺服器暨資料庫帳號申請表.docx  README.md  dcard_continuous.py  package-lock.json  package.json  二技第111202組-知音-系統簡介.docx  專題系統手冊.docx  會議紀錄.md  甘特圖.xlsx  知音初評.pptx
(日間大學部)專題分組申請單暨專題製作計畫書_110/: (日間大學部)專題分組申請單暨專題製作計畫書_110.11.24.docx
Navicat 15/: readme.txt
api/: db.sqlite3
django_web/: readme.txt
frontEnd/: readme.txt  test.txt
model_compar/: 2021-12.csv  article.csv  dcard_continuous.py  dcard_couple1.txt  dcard_if_ptt.ipynb  done_2021-10to11.csv  main-3.ipynb  mixexcel.ipynb  move_emoji.ipynb  ptt_crawler.py  selenium_ptt.ipynb  song_compar.py  tf_2.ipynb  tfidf_2.ipynb  youtube_crawler.ipynb
mood_template/: PTT_crawler.py
pages/: _app.js  index.js
project-front/: package-lock.json  package.json  安裝步驟.txt
project-front/django-user-restapi/: pyproject.toml
project-front/django-user-restapi/app/authorization/: admin.py
project-front/django-user-restapi/setting/: urls.py
styles/: Home.module.css  globals.css
文件圖檔/: ♬知音♬  使用個案圖_ver.1  使用活動圖.drawio  分析類別圖（Analysis class diagram）  循序圖.drawio  設計類別圖（Design class diagram）  需求事件表.docx
會議紀錄/: 02.17 會議記錄.md  03.04 會議記錄.md  03.11 會議記錄.md  03.13 會議記錄.md  04.01 會議記錄.md  04.29 會議記錄.md  1102-二技組評審建議事項 .docx  12.02 會議記錄.md  12.04 會議記錄.md  2021_12_04 會議紀錄.md  2022_03_25 會議記綠.md  2022_04_29 會議記錄.md  2022_05_13 會議記錄.md  2022_06_24 會議記錄.txt  2022_07_31 會議紀錄.txt  2022_08_30 會議記錄.txt  2022_09_16 會議記錄.txt  2022_09_30 會議記錄.txt  2022_12_09.txt  test.txt
歌詞爬蟲 2000-2021/: mojim_crawler.py  (+1 more)
(+245 files in other folders)
